--- a/CSS/style.css
+++ b/CSS/style.css
@@ -126,7 +126,7 @@
     --color5: #bc1e10;
     --color2: #F88820;
     --color3: #F0C820;
-    --color6: #00ffff;
+    --color6: #13d0d0;
 
     --footer-bg: #252422;
     --title1: #ea9a06;
