--- a/CSS/style.css
+++ b/CSS/style.css
@@ -170,6 +170,7 @@ p {
     height: 60px;
     width: 100%;
     backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(8px);
     z-index: 99;
 }
 
