--- a/CSS/style.css
+++ b/CSS/style.css
@@ -135,7 +135,7 @@
     --slider: #001c3f;
     --slider-border: #b4b0ff;
 
-    --primary-bg: #0b0b0c;
+    --primary-bg: #0e0e10;
     --secondary-bg: #121213;
 
     --nav-shadow: 0;
