--- a/CSS/style.css
+++ b/CSS/style.css
@@ -169,6 +169,7 @@ p {
     padding: 15px 70px;
     height: 60px;
     width: 100%;
+    -webkit-backdrop-filter: blur(8px);
     backdrop-filter: blur(8px);
     z-index: 99;
 }
