--- a/CSS/style.css
+++ b/CSS/style.css
@@ -210,22 +210,9 @@ p {
     /* font-size: 0; */
 }
 
-.hamburger {
+#menuToggle,
+#checkbox {
     display: none;
-}
-
-.bar {
-    display: block;
-    background-color: var(--color1);
-    width: 30px;
-    height: 3px;
-    margin: 5px auto;
-    border-top-right-radius: 15px;
-    border-top-left-radius: 15px;
-    border-bottom-right-radius: 15px;
-    border-bottom-left-radius: 15px;
-    -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
 }
 
 .nav-logo {
@@ -377,18 +364,65 @@ p {
         display: block;
         cursor: pointer;
     }
-
-    .hamburger.active .bar:nth-child(2) {
-        opacity: 0;
+    .toggle {
+        position: relative;
+        width: 40px;
+        cursor: pointer;
+        margin: auto;
+        display: block;
+        height: calc(4px * 3 + 11px * 2);
     }
-
-    .hamburger.active .bar:nth-child(1) {
-        transform: translateY(8px) rotate(45deg);
+    .bar {
+        position: absolute;
+        left: 0;
+        right: 0;
+        height: 4px;
+        border-radius: calc(4px / 2);
+        background: var(--color1);
+        color: inherit;
+        opacity: 1;
+        transition: none 0.35s cubic-bezier(.5,-0.35,.35,1.5) 0s;
     }
+    /***** Collapse Animation *****/
 
-    .hamburger.active .bar:nth-child(3) {
-        transform: translateY(-8px) rotate(-45deg);
-    }
+.bar--top {
+  bottom: calc(50% + 11px + 4px/ 2);
+  transition-property: bottom,margin,transform;
+  transition-delay: calc(0s + 0.35s),0s,0s;
+}
+
+.bar--middle {
+  top: calc(50% - 4px/ 2);
+  transition-property: top,opacity;
+  transition-duration: 0.35s,0s;
+  transition-delay: calc(0s + 0.35s * 1.3),calc(0s + 0.35s * 1.3);
+}
+
+.bar--bottom {
+  top: calc(50% + 11px + 4px/ 2);
+  transition-property: top,transform;
+  transition-delay: 0s;
+}
+
+#checkbox:checked + .toggle .bar--top {
+  bottom: calc(50% - 11px - 4px);
+  margin-bottom: calc(11px + 4px/ 2);
+  transform: rotate(45deg);
+  transition-delay: calc(0s + 0.35s * .3),calc(0s + 0.35s * 1.3),calc(0s + 0.35s * 1.3);
+}
+
+#checkbox:checked + .toggle .bar--middle {
+  top: calc(50% + 11px);
+  opacity: 0;
+  transition-duration: 0.35s,0s;
+  transition-delay: 0s,calc(0s + 0.35s);
+}
+
+#checkbox:checked + .toggle .bar--bottom {
+  top: calc(50% - 4px/ 2);
+  transform: rotate(-45deg);
+  transition-delay: calc(0s + 0.35s * 1.3),calc(0s + 0.35s * 1.3);
+}
 }
 
 .section-name h4 {
