--- a/CSS/style.css
+++ b/CSS/style.css
@@ -364,7 +364,7 @@ p {
         display: block;
         cursor: pointer;
     }
-    .toggle {
+    .togglE {
         position: relative;
         width: 40px;
         cursor: pointer;
@@ -404,21 +404,21 @@ p {
   transition-delay: 0s;
 }
 
-#checkbox:checked + .toggle .bar--top {
+#checkbox:checked + .togglE .bar--top {
   bottom: calc(50% - 11px - 4px);
   margin-bottom: calc(11px + 4px/ 2);
   transform: rotate(45deg);
   transition-delay: calc(0s + 0.35s * .3),calc(0s + 0.35s * 1.3),calc(0s + 0.35s * 1.3);
 }
 
-#checkbox:checked + .toggle .bar--middle {
+#checkbox:checked + .togglE .bar--middle {
   top: calc(50% + 11px);
   opacity: 0;
   transition-duration: 0.35s,0s;
   transition-delay: 0s,calc(0s + 0.35s);
 }
 
-#checkbox:checked + .toggle .bar--bottom {
+#checkbox:checked + .togglE .bar--bottom {
   top: calc(50% - 4px/ 2);
   transform: rotate(-45deg);
   transition-delay: calc(0s + 0.35s * 1.3),calc(0s + 0.35s * 1.3);
