--- a/CSS/style.css
+++ b/CSS/style.css
@@ -136,7 +136,7 @@
     --slider-border: #b4b0ff;
 
     --primary-bg: #121212;
-    --secondary-bg: #121213;
+    --secondary-bg: #0b0b0b;
 
     --nav-shadow: 0;
     --card-shadow: 0;
