--- a/CSS/style.css
+++ b/CSS/style.css
@@ -849,7 +849,8 @@ p {
     /* padding: 20px; */
 }
 
-.sub-card-top-right img {
+.sub-card-top-right img:nth-child(1) {
+    display: none;
     height: 100px;
     opacity: .8;
     transition: var(--gen-transition);
@@ -860,7 +861,7 @@ p {
     opacity: .3;
     /* transition: var(--gen-transition); */
     top: 15px;
-    left: 15px;
+    right: 15px;
     position: absolute;
     animation: rotate 20s linear infinite;
     transition: var(--gen-transition);
@@ -871,7 +872,7 @@ p {
     height: 160px;
     opacity: .3;
     top: 15px;
-    left: 15px;
+    right: 15px;
     position: absolute;
     transition: var(--gen-transition);
     z-index: var(--layer-1);
