--- a/CSS/style.css
+++ b/CSS/style.css
@@ -753,11 +753,11 @@ p {
 .fade-text {
     position: absolute;
     top: 20%;
-    right: 30%;
+    left: 20%;
     display: flex;
     flex-direction: column;
     text-align: center;
-    opacity: .7;
+    opacity: .3;
     z-index: var(--layer-1);
 }
 
