--- a/CSS/style.css
+++ b/CSS/style.css
@@ -731,7 +731,7 @@ p {
 .sub-card {
     position: relative;
     height: 240px;
-    max-width: 420px;
+    width: 420px;
     margin: 0 20px 50px 20px;
     box-shadow: var(--card-shadow);
     transition: var(--gen-transition);
